[package]
name = "novas"
version = "0.1.0"
edition = "2021"

description = "Aplicativo cli sinxelo para consultar titulares"
license = "MIT License"
authors = ["mmouzo"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21.3"
colour = "0.7.0"
newsapi = {path = "./newsapi"}
dotenv = "0.15.0"
termimad = "0.22.0"
crossterm = "0.26.1"
